--- a/css/main.css
+++ b/css/main.css
@@ -139,3 +139,9 @@ svg {
     height: 30px !important;
     text-align: center;
 }
+cool {
+    border: 1px solid #eee;
+    float: left;
+    height: 500px;
+    width: 450px;
+}
